Fix order of analyse tools on mobile

--- a/tools/themes/mobile.css
+++ b/tools/themes/mobile.css
@@ -123,10 +123,6 @@ body.lichessTools.lichessTools-theme_mobile.mobile main.round div.rcontrols:has(
   display: none;
 }
 
-body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools:has(.retro-box) .analyse__moves {
-  order: 2;
-}
-
 body.lichessTools.lichessTools-theme_mobile.mobile .training-box .choices {
   margin-bottom: 0;
 }
@@ -174,8 +170,28 @@ body.lichessTools.lichessTools-theme_mobile.mobile aside.analyse__side div.game_
   display: block;
 }
 
-body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools .analyse__fork {
+body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools div.analyse__fork {
   order: 0;
+}
+
+body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools div.ceval {
+  order: 1;
+}
+
+body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools div.pv_box {
+  order: 2;
+}
+
+body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools section.explorer-box {
+  order: 3;
+}
+
+body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools .lichessTools-resizeExplorer {
+  order: 5;
+}
+
+body.lichessTools.lichessTools-theme_mobile.mobile .analyse__tools .analyse__moves {
+  order: 6;
 }
 
 
